# usearch-kmp

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: dispatcher.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: CMakeBuildTask.kt  CMakeConfigureForKonanTask.kt  CMakeConfigureTask.kt  CMakeExecutor.kt  CMakePluginExtension.kt  DefFileTask.kt  JniHeaderTask.kt  KonanExt.kt  Library.kt  Target.kt  TargetExtension.kt  TargetListExtension.kt  bridge.gradle.kts  cmake.gradle.kts
gradle/: libs.versions.toml
src/androidInstrumentedTest/kotlin/: JniLoadTest.kt
src/androidMain/kotlin/usearch/: Platform.android.kt
src/bridgeMain/java/usearch/: NativeBridge.java
src/commonMain/kotlin/usearch/: DelegatedList.kt  Float16.kt  Index.kt  IndexOptions.kt  IndexQuery.kt  Matches.kt  MetricKind.kt  ScalarKind.kt  USearchException.kt
src/commonTest/kotlin/: Float16Test.kt  IndexTest.kt  LeakTest.kt
src/cppMain/: CMakeLists.txt  jbridge.cpp  jexceptions.cpp  jexceptions.h  lib.cpp  lib.h  main.cpp
src/jvmCommonMain/bridge/usearch/: NativeBridge.java
src/jvmCommonMain/kotlin/usearch/: Index.kt  Lib.kt  Matches.kt  MetricKind.kt  NativeBridge.kt  NativeMethods.kt  Platform.jvmCommon.kt  Platform.kt  ScalarKind.kt
src/jvmMain/kotlin/usearch/: Platform.jvm.kt
src/nativeMain/kotlin/usearch/: DelegatedList.kt  Index.kt  IndexOptions.kt  Matches.kt  MetricKind.kt  ScalarKind.kt  UError.kt  UString.kt
